GRADLE-532	Example 4.13 might produce NPE
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1812 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/antChecksum/build.gradle
+++ b/src/samples/userguide/tutorial/antChecksum/build.gradle
@@ -1,8 +1,10 @@
 task checksum << {
     def files = file('../antChecksumFiles').listFiles().sort()
     files.each { File file ->
-        ant.checksum(file: file, property: file.name)
-        println "$file.name Checksum: ${ant.properties[file.name]}"
+        if (file.isFile()) {
+            ant.checksum(file: file, property: file.name)
+            println "$file.name Checksum: ${ant.properties[file.name]}"
+        }
     }
 }
         
