--- a/src/samples/dependencies/build.gradle
+++ b/src/samples/dependencies/build.gradle
@@ -2,6 +2,15 @@ import org.apache.ivy.plugins.resolver.FileSystemResolver
 import org.junit.Assert
 import org.gradle.api.tasks.diagnostics.DependencyReportTask
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'junit:junit:4.7'
+    }
+}
+
 group = 'sealife'
 
 project(':atlantic') {
