Some performance fixes: - Ported AnnotationProcessingTaskFactory from Groovy to Java - Replaced usages of TaskAction with Action<Task> on Task interface - Cache all scripts, including empty and embedded scripts. - Cache scripts in ~/.gradle/scriptCache, rather than $scriptDir/.gradle
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1815 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/performanceTest/build.gradle
+++ b/performanceTest/build.gradle
@@ -37,7 +37,7 @@ class GeneratorTask extends DefaultTask {
     int projects = 1
 
     @TaskAction
-    private void generate() {
+    void generate() {
         ant.delete(dir: destDir)
         destDir.mkdirs()
 
