GRADLE-616	Problems Resolving external dependencies when project dependencies are used
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1826 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ subprojects {
 }
 
 allprojects {
-    task ide << {task ->
+    task ide(dependsOn: project.configurations.testRuntime.buildDependencies) << {task ->
         def libDir = task.project.file('lib')
         ant.delete(dir: libDir)
         copy {
