Workaround until a real fix for GRADLE-616 is provided.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1827 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -92,11 +92,11 @@ subprojects {
 }
 
 allprojects {
-    task ide(dependsOn: project.configurations.testRuntime.buildDependencies) << {task ->
+    task ide << {task ->
         def libDir = task.project.file('lib')
         ant.delete(dir: libDir)
         copy {
-            from task.project.configurations.testRuntime.files(DependencySpecs.type(Type.EXTERNAL))
+            from task.project.configurations.testRuntime.copyRecursive(DependencySpecs.type(Type.EXTERNAL)).files
             into libDir
         }
     }
