- Added a first cut at a chapter describing how to work with files - Added FileCollection.asType() to allow the 'as' keyword to be used with file collections. - Introduced ConfigurableFileTree interface, and replaced Project.fileSet() with fileTree() - Renamed FileSet.dir to baseDir - Changed a bunch of places to use Project.fileTree() rather than new FileSet().
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1829 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -18,7 +18,7 @@ compile {
 }
 
 manifest.mainAttributes(myprop: 'myvalue')
-metaInf << new FileSet(new File(srcRoot, 'metaInfFiles'))
+metaInf << fileTree(baseDir: new File(srcRoot, 'metaInfFiles'))
 
 test {
 	useJUnit().options.systemProperties['org.gradle.integtest.buildDir'] = buildDir.absolutePath
