--- a/src/samples/userguide/tutorial/excludeTasks/build.gradle
+++ b/src/samples/userguide/tutorial/excludeTasks/build.gradle
@@ -1,15 +1,15 @@
 task compile << {
-    println "compiling source"
+    println 'compiling source'
 }
 
 task compileTest(dependsOn: compile) << {
-    println "compiling unit tests"
+    println 'compiling unit tests'
 }
 
 task test(dependsOn: [compile, compileTest]) << {
-    println "running unit tests"
+    println 'running unit tests'
 }
 
 task dist(dependsOn: [compile, test]) << {
-    println "building the distribution"
+    println 'building the distribution'
 }
