--- a/src/samples/webApplication/customised/build.gradle
+++ b/src/samples/webApplication/customised/build.gradle
@@ -25,9 +25,9 @@ dependencies {
 }
 
 war {
-    fileSet(dir: file('src/rootContent')) // adds a file-set to the root of the archive
-    webInf(dir: file('src/additionalWebInf')) // adds a file-set to the WEB-INF dir.
-    additionalLibs(dir: file('additionalLibs')) // adds a file-set to the WEB-INF/lib dir.
+    fileSet(baseDir: file('src/rootContent')) // adds a file-set to the root of the archive
+    webInf(baseDir: file('src/additionalWebInf')) // adds a file-set to the WEB-INF dir.
+    additionalLibs(baseDir: file('additionalLibs')) // adds a file-set to the WEB-INF/lib dir.
     libConfigurations('moreLibs') // adds a configuration to the WEB-INF/lib dir.
     webXml = file('src/someWeb.xml') // copies a file to WEB-INF/web.xml
 }
