--- a/src/samples/userguide/tutorial/dynamic/build.gradle
+++ b/src/samples/userguide/tutorial/dynamic/build.gradle
@@ -1,5 +1,5 @@
 4.times { counter ->
-    task "task_$counter" << {
+    task "task$counter" << {
         println "I'm task number $counter"
     }
 }
