GRADLE-571: - Some fixes to get source { main { groovy { srcDir '..' } } } working - Added some samples for customising the project source layout - Removed GroovyPluginConvention
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1833 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/groovyWithFlatDir/build.gradle
+++ b/src/samples/userguide/tutorial/groovyWithFlatDir/build.gradle
@@ -7,9 +7,9 @@ repositories {
 
 dependencies {
     groovy module(':groovy:1.6.0') {
-        dependency("asm:asm-all:2.2.3")
-        dependency("antlr:antlr:2.7.7")
-        dependency("commons-cli:commons-cli:1.2")
+        dependency('asm:asm-all:2.2.3')
+        dependency('antlr:antlr:2.7.7')
+        dependency('commons-cli:commons-cli:1.2')
         module(':ant:1.7.0') {
             dependencies(':ant-junit:1.7.0:jar', ':ant-launcher:1.7.0')
         }
