--- a/subprojects/gradle-ui/build.gradle
+++ b/subprojects/gradle-ui/build.gradle
@@ -61,3 +61,5 @@ test {
     exclude 'org/gradle/integtests/**/*.*'
 }
 
+// We should not need this, but temporarily this will keep the CI builds from failing 
+checkstyle.dependsOn(project(':gradle-core').uploadDefaultInternal, project(':gradle-open-api').uploadDefaultInternal)
