- Renamed FileSet.baseDir back to dir - Fixed copy { from configurations.someConfig } - Fixed copy { from someFileCollection + someOtherFileCollection }
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1842 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -18,7 +18,7 @@ compile {
 }
 
 manifest.mainAttributes(myprop: 'myvalue')
-metaInf << fileTree(baseDir: new File(srcRoot, 'metaInfFiles'))
+metaInf << fileTree(dir: new File(srcRoot, 'metaInfFiles'))
 
 test {
 	useJUnit().options.systemProperties['org.gradle.integtest.buildDir'] = buildDir.absolutePath
