--- a/src/samples/userguide/tutorial/zipProject/build.gradle
+++ b/src/samples/userguide/tutorial/zipProject/build.gradle
@@ -2,7 +2,7 @@ usePlugin 'java'
 version = 1.0
 
 task myZip(type: Zip) {
-    fileSet(baseDir: 'somedir')
+    fileSet(dir: 'somedir')
 }
 
 println myZip.archiveName
