--- a/src/samples/userguide/tutorial/zipWithArguments/build.gradle
+++ b/src/samples/userguide/tutorial/zipWithArguments/build.gradle
@@ -5,7 +5,7 @@ version = 1.0
 task myZip(type: Zip) {
     appendix = 'wrapper'
     classifier = 'src'
-    fileSet(baseDir: 'somedir')
+    fileSet(dir: 'somedir')
 }
 
 println myZip.archiveName
