--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,27 @@ userguideOutputDir = new File(samplesSrcDir, 'userguideOutput')
 
 archivesBaseName = 'gradle'
 
+libraries = [
+        ant             : 'org.apache.ant:ant:1.7.0@jar',
+        ant_junit       : 'org.apache.ant:ant-junit:1.7.0@jar',
+        ant_launcher    : 'org.apache.ant:ant-launcher:1.7.0@jar',
+        antlr           : 'antlr:antlr:2.7.7@jar',
+        asm_all         : 'asm:asm-all:2.2.3@jar',
+        commons_cli     : 'commons-cli:commons-cli:1.2@jar',
+        commons_io      : 'commons-io:commons-io:1.4@jar',
+        dom4j           : 'dom4j:dom4j:1.6.1@jar',
+        groovy          : 'org.codehaus.groovy:groovy:1.6.4@jar',
+        jaxen           : 'jaxen:jaxen:1.1@jar',
+        jopt_simple     : 'net.sf.jopt-simple:jopt-simple:2.4.1@jar',
+        jul_to_slf4j    : 'org.slf4j:jul-to-slf4j:1.5.3@jar',
+        logback_classic : 'ch.qos.logback:logback-classic:0.9.9@jar',
+        logback_core    : 'ch.qos.logback:logback-core:0.9.9@jar',
+        slf4j_api       : 'org.slf4j:slf4j-api:1.5.3@jar',
+    ]
+
+libraries.groovy_depends  = [libraries.groovy, libraries.ant, libraries.ant_launcher, libraries.asm_all,
+        libraries.antlr, libraries.commons_cli, libraries.ant_junit]
+
 allprojects {
     group = 'org.gradle'
 
