--- a/subprojects/gradle-core/build.gradle
+++ b/subprojects/gradle-core/build.gradle
@@ -3,15 +3,7 @@ import java.text.DateFormat
 usePlugin 'groovy'
 
 dependencies {
-    def GROOVY_DEPENDENCIES = [
-            "asm:asm-all:2.2.3@jar",
-            "antlr:antlr:2.7.7@jar",
-            "commons-cli:commons-cli:1.2@jar",
-            "org.apache.ant:ant:1.7.0@jar",
-            "org.apache.ant:ant-junit:1.7.0@jar",
-            "org.apache.ant:ant-launcher:1.7.0@jar"
-    ]
-    groovy "org.codehaus.groovy:groovy:1.6.4@jar", GROOVY_DEPENDENCIES
+    groovy libraries.groovy_depends
 
     compile "commons-httpclient:commons-httpclient:3.0@jar", "commons-codec:commons-codec:1.2@jar", "org.slf4j:jcl-over-slf4j:1.5.3@jar"
 
@@ -25,7 +17,7 @@ dependencies {
     // todo - the transtive dependencies should be runtime dependencies
     // todo jsp stuff should be bundled
     compile "org.mortbay.jetty:jetty:6.1.14@jar", "javax.servlet:servlet-api:2.5@jar",
-                "org.apache.ant:ant:1.7.0@jar",
+                libraries.ant,
                 "org.mortbay.jetty:jsp-api-2.1:6.1.14@jar",
                 "org.mortbay.jetty:jsp-2.1:6.1.14@jar",
                 "org.eclipse.jdt:core:3.1.1@jar",
@@ -36,19 +28,19 @@ dependencies {
     compile "org.apache.ivy:ivy:2.1.0-rc2@jar", "jsch:jsch:0.1.31@jar"
 
     compile "net.sf.jopt-simple:jopt-simple:2.4.1@jar",
-            "org.apache.ant:ant:1.7.0@jar",
+            libraries.ant,
             "ch.qos.logback:logback-classic:0.9.9@jar",
             "org.slf4j:slf4j-api:1.5.3@jar",
             "org.slf4j:jul-to-slf4j:1.5.3@jar",
             "ch.qos.logback:logback-core:0.9.9@jar",
-            "commons-io:commons-io:1.4@jar",
+            libraries.commons_io,
             "commons-lang:commons-lang:2.3@jar",
             "commons-codec:commons-codec:1.2@jar",
             "commons-collections:commons-collections:3.2.1@jar",
             "slide:webdavlib:2.0@jar",
             "biz.aQute:bndlib:0.0.255@jar",
             "org.apache.maven:maven-ant-tasks:2.0.9@jar",
-            "asm:asm-all:2.2.3@jar"
+            libraries.asm_all
 
     runtime "org.slf4j:log4j-over-slf4j:1.5.3@jar", "org.slf4j:jcl-over-slf4j:1.5.3@jar"
 
@@ -56,13 +48,13 @@ dependencies {
 
     testCompile "xmlunit:xmlunit:1.2"
 
-    runtime "org.apache.ant:ant-junit:1.7.0@jar",
-            "org.apache.ant:ant-launcher:1.7.0@jar",
+    runtime libraries.ant_junit,
+            libraries.ant_launcher,
             "org.apache.ant:ant-nodeps:1.7.0@jar",
             "org.apache.ant:ant-trax:1.7.0@jar"
 
     def BEAN_UTILS = ["commons-beanutils:commons-beanutils-core:1.7.0@jar", "commons-collections:commons-collections:2.0@jar", "org.slf4j:jcl-over-slf4j:1.5.3@jar"]
-    runtime "checkstyle:checkstyle:5.0@jar", "antlr:antlr:2.7.7@jar", "org.slf4j:jcl-over-slf4j:1.5.3@jar",
+    runtime "checkstyle:checkstyle:5.0@jar", libraries.antlr, "org.slf4j:jcl-over-slf4j:1.5.3@jar",
             "com.google.collections:google-collections:0.9@jar", BEAN_UTILS
 }
 
