--- a/subprojects/gradle-open-api/build.gradle
+++ b/subprojects/gradle-open-api/build.gradle
@@ -1,14 +1,6 @@
 usePlugin 'groovy'
 
 dependencies {
-    def GROOVY_DEPENDENCIES = [
-            "asm:asm-all:2.2.3@jar",
-            "antlr:antlr:2.7.7@jar",
-            "commons-cli:commons-cli:1.2@jar",
-            "org.apache.ant:ant:1.7.0@jar",
-            "org.apache.ant:ant-junit:1.7.0@jar",
-            "org.apache.ant:ant-launcher:1.7.0@jar"
-    ]
-    groovy "org.codehaus.groovy:groovy:1.6.4@jar", GROOVY_DEPENDENCIES
+    groovy libraries.groovy_depends
 }
 
