Updated the git ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,19 @@
 .gradle
 build
 out
-src/docs/userguide/*.aux
-src/docs/userguide/*.out
-src/docs/userguide/*.log
-src/docs/userguide/*.toc
-src/docs/userguide/*.pdf
-gradle-core.iml
 userguide-trunk.tmproj
 lib
 buildSrc/lib
 buildSrc/build
+buildSrc/.gradle
+subprojects/gradle-core/build
+subprojects/gradle-open-api/build
+subprojects/gradle-ui/build
+subprojects/gradle-wrapper/build
+website/build
+website/.gradle
 *.iml
 *.ipr
 *.iws
 tmpTest
+intTestHomeDir
