--- a/src/samples/java/withIntegrationTests/build.gradle
+++ b/src/samples/java/withIntegrationTests/build.gradle
@@ -16,23 +16,18 @@ configurations {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.5'
     integrationTestCompile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    integrationTestCompile files(source.test.classesDir)
 }
 
 source {
     integrationTest {
         java.srcDir file('src/integration-test/java')
         resources.srcDir file('src/integration-test/resources')
-        compileClasspath = configurations.integrationTestCompile
-        runtimeClasspath = configurations.integrationTestRuntime
+        compileClasspath = source.main.classes + source.test.classes + configurations.integrationTestCompile
+        runtimeClasspath = classes + compileClasspath + configurations.integrationTestRuntime
     }
 }
 
-compileIntegrationTest {
-    dependsOn compileTest
-}
-
-task integrationTest(type: Test, dependsOn: [jar, compileIntegrationTest, processIntegrationTestResources]) {
+task integrationTest(type: Test, dependsOn: jar) {
     testClassesDir = source.integrationTest.classesDir
     configuration = source.integrationTest.runtimeClasspath
     options.systemProperties['jar.path'] = jar.archivePath
