--- a/src/samples/java/multiproject/api/build.gradle
+++ b/src/samples/java/multiproject/api/build.gradle
@@ -42,7 +42,7 @@ artifacts {
 
 // START SNIPPET dists
 task dist(type: Zip) {
-    dependsOn configurations.runtime.buildDependencies
+    dependsOn configurations.runtime
     files configurations.runtime
     fileSet dir: 'src/dist'
 }
