GRADLE-634, GRADLE-635, GRADLE-636 - Added support for Scala+Java joint compilation - Changed groovy and scala plugins so that they add groovy/scala compile tasks, rather than replacing existing java compile task. This allows any combo of java/scala/groovy source in a project. - Use dependency auto-wiring for Jar and War contents, so that these tasks are automatically picked up as dependencies.

--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.api.tasks.util.FileSet
-
 usePlugin 'groovy'
 
 group = 'org.gradle'
@@ -8,13 +6,17 @@ version = '1.0'
 dependencies {
     groovy 'org.codehaus.groovy:groovy-all:1.6.0'
     compile project(':groovycDetector')
-    testCompile 'junit:junit:4.4'
+    testCompile 'junit:junit:4.7'
 }
 
 compile {
-    exclude '**/Exclude.java'
+    exclude '**/ExcludeJava.java'
+}
+
+compileGroovy {
     groovyExclude '**/ExcludeGroovy.groovy'
     groovyJavaExclude '**/ExcludeGroovyJava.java'
+    groovyOptions.fork(memoryMaximumSize: '128M')
 }
 
 manifest.mainAttributes(myprop: 'myvalue')
@@ -22,8 +24,4 @@ metaInf << fileTree(dir: new File(srcRoot, 'metaInfFiles'))
 
 test {
 	useJUnit().options.systemProperties['org.gradle.integtest.buildDir'] = buildDir.absolutePath
-}
-
-compile {
-    groovyOptions.fork(memoryMaximumSize: '128M')
 }
