GRADLE-634, GRADLE-635, GRADLE-636 - Added samples for groovy+java and scala+java joint compilation - Added int tests for above - Changed samples to all use same version of junit (4.7)

--- a/src/samples/ivypublish/build.gradle
+++ b/src/samples/ivypublish/build.gradle
@@ -25,9 +25,7 @@ repositories {
 
 task sourceJar(type: Jar) {
     baseName = 'ivypublishSource'
-    source.main.java.srcDirs.each {
-        fileSet(dir: it)
-    }
+    files source.main.java
 }
 
 artifacts {
