--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -14,8 +14,7 @@ compile {
 }
 
 compileGroovy {
-    groovyExclude '**/ExcludeGroovy.groovy'
-    groovyJavaExclude '**/ExcludeGroovyJava.java'
+    groovyExclude '**/ExcludeGroovy.groovy', '**/ExcludeGroovyJava.java'
     groovyOptions.fork(memoryMaximumSize: '128M')
 }
 
