--- a/src/samples/groovy/customizedLayout/build.gradle
+++ b/src/samples/groovy/customizedLayout/build.gradle
@@ -1,6 +1,15 @@
-// START SNIPPET define-main
 usePlugin 'groovy'
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.6.0'
+    testCompile group: 'junit', name: 'junit', version: '4.7'
+}
+
+// START SNIPPET define-main
 source {
     main {
         groovy {
