--- a/src/samples/scala/customizedLayout/build.gradle
+++ b/src/samples/scala/customizedLayout/build.gradle
@@ -1,6 +1,19 @@
-// START SNIPPET define-main
 usePlugin 'scala'
 
+repositories {
+    mavenRepo urls: 'http://scala-tools.org/repo-releases/'
+    mavenCentral()
+}
+
+dependencies {
+    scalaTools 'org.scala-lang:scala-compiler:2.7.6'
+    scalaTools 'org.scala-lang:scala-library:2.7.6'
+
+    compile 'org.scala-lang:scala-library:2.7.6'
+    testCompile group: 'junit', name: 'junit', version: '4.7'
+}
+
+// START SNIPPET define-main
 source {
     main {
         scala {
