GRADLE-635 - Merged GroovyCompile.groovySourceDirs into srcDirs, groovyIncludes into includes and groovyExcludes into excludes - Merged ScalaCompile.scalaSrcDirs into srcDirs, scalaIncludes into includes and scalExcludes into excludes

--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -14,7 +14,7 @@ compile {
 }
 
 compileGroovy {
-    groovyExclude '**/ExcludeGroovy.groovy', '**/ExcludeGroovyJava.java'
+    exclude '**/ExcludeGroovy.groovy', '**/ExcludeGroovyJava.java'
     groovyOptions.fork(memoryMaximumSize: '128M')
 }
 
